# syndata

./: Dockerfile  Makefile  README.adoc  arztpraxen.fhir.ndjson  goä-abschnitte.ndjson  goä.ndjson  invoices.py  main.py  organizations.py  patients.py  pyproject.toml  requirements.txt  versicherte.fhir.ndjson
static/: invoice.css
templates/: invoice.html
